--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
         "prod": "npm run production",
         "production": "mix --production"
     },
+    "resolutions": {
+        "autoprefixer": "10.4.5"
+    },
+    "overrides": {
+        "autoprefixer": "10.4.5"
+    },
     "devDependencies": {
         "@babel/preset-react": "^7.13.13",
         "@popperjs/core": "^2.10.2",
@@ -19,6 +25,7 @@
         "postcss": "^8.1.14",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "resolve-url-loader": "5.0.0",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1"
     }
